# structures

./: .gitignore  CMakeLists.txt  README.md
include/structures/: linked_list.h  stack.h
src/: main.c
src/structures/: linked_list.c  stack.c
